# awtrix_esp32

./: .gitmodules  CMakeLists.txt
compornents/awtrix/: CMakeLists.txt  awtrix.c  awtrix_clock.c
compornents/awtrix/include/: awtrix.h  font.h
compornents/device/: CMakeLists.txt
compornents/device/include/: ws2812.h
compornents/device/src/: ws2812.c
main/: main.c
project/: CMakeLists.txt  sdkconfig  sdkconfig.old
project/awtrix/: CMakeLists.txt  awtrix.c  awtrix_api.c  awtrix_clock.c  awtrix_effect.c  awtrix_music.c  awtrix_temp.c  awtrix_weather.c  fft.c
project/awtrix/include/: awtrix.h  awtrix_api.h  awtrix_music.h  awtrix_weather.h  fft.h
project/drivers/: CMakeLists.txt
project/drivers/adc/include/: adc.h
project/drivers/dev_time/: dev_time.c
project/drivers/dev_time/include/: dev_time.h
project/drivers/fft/: arduinoFFT.c  fft.c
project/drivers/fft/include/: arduinoFFT.h  fft.h
project/drivers/fonts/: fonts.c  shape.c  shape_5x6.c
project/drivers/fonts/include/: shape.h
project/drivers/sht30/: sht30.c
project/drivers/sht30/include/: sht30.h
project/drivers/wifi/: wifi.c
project/drivers/wifi/include/: wifi.h
project/drivers/ws2812/: ws2812.c
project/drivers/ws2812/include/: ws2812.h
project/main/: main.c
project/my_hal/: CMakeLists.txt
project/my_hal/adc/: adc.c
project/my_hal/adc/include/: adc.h
project/my_hal/i2c/: hal_i2c.c
project/my_hal/i2c/include/: hal_i2c.h
