idf_component_register(SRCS "ws2812/ws2812.c"
                            "wifi/wifi.c"
                            "fonts/fonts.c"
                            "fonts/shape.c"
                            "fft/arduinoFFT.c"
                            "adc/adc.c"
                    INCLUDE_DIRS "ws2812/include"
                                 "wifi/include"
                                 "fonts/include"
                                 "fft/include"
                                 "adc/include"
                    PRIV_REQUIRES "driver"
                                  "drivers"
                                  "esp_adc_cal"
                    )
