idf_component_register(SRCS "ws2812/ws2812.c"
                            "wifi/wifi.c"
                            "fonts/fonts.c"
                            "fonts/shape.c"
                            "fft/fft.c"
                            "fft/arduinoFFT.c"
                            "adc/adc.c"
                            "fonts/shape_5x6.c"
                            "sht30/sht30.c"
                            "dev_time/dev_time.c"
                    INCLUDE_DIRS "ws2812/include"
                                 "wifi/include"
                                 "fonts/include"
                                 "fft/include"
                                 "sht30/include"
                                 "dev_time/include"
                    PRIV_REQUIRES "driver"
                                  "my_hal"
                    )
